ASSERTION FAILED: The string being removed is atomic in the string table of an other thread! iterator != atomicStringTable.end() at Source/WTF/wtf/text/AtomicStringImpl.cpp(453) https://bugs.webkit.org/show_bug.cgi?id=161800

Reviewed by Žan Doberšek.

Speculative fix. These strings are created as static objects on a secondary thread, but all
static objects are destroyed in exit handlers on the main thread, and AtomicStrings must
always be destroyed on the same thread they are created.

* platform/graphics/texmap/TextureMapperShaderProgram.h:

Canonical link: https://commits.webkit.org/180229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206061 268f45cc-cd09-0410-ab3c-d52691b4dbfc